# Personal-coding-agent

./: .env.example  .gitignore  README.md  call_function.py  config.py  main.py  prompts.py  pyproject.toml
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
playground/: tests.py
providers/: __init__.py  base.py
src/: call_function.py  cli_args.py  cli_handlers.py  config.py  main.py  memory_store.py  prompts.py  session_store.py
src/chat/: chat_loop.py  repl.py
src/functions/: __init__.py  grep_project.py  run_cli_command.py  run_python_file.py  write_file.py
src/indexing/: manifest.py
src/providers/: __init__.py  base.py  gemini_provider.py  ollama_provider.py
src/tools/: tool_definitions.py
tests/: conftest.py  test_chat_loop.py  test_create_provider.py  test_execute_tool.py  test_get_file_content.py  test_get_files_info.py  test_main_cli.py  test_manifest.py  test_ollama_chat_system_sync.py  test_prompts.py  test_run_cli.py  test_run_python_file.py  test_write_file.py
tools/: tool_definitions.py
