[project]
name = "coding_agent"
version = "0.1.0"
description = "Personal coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.69.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "ollama>=0.4.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py313"
lint.select = ["E", "F", "I", "B", "W", "ASYNC", "C4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[project.scripts]
coding_agent = "main:main"
